# AttentionIsOFFByOne

./: README.md  benchmark.py  benchmarks.py  e1.py  example.py  pyproject.toml  requirements.txt  setup.py  test.py
optimized/: binding.cpp  softmaxone.h  wrapper.cpp
softmax_one/: __init__.py  attention.py  softmax_one.py  softmax_one_cupy.py
softmax_one/optimized/: binding.cpp  softmax1.cpp  softmax_one.cpp  softmaxone.h  wrapper.cpp
tests/: benchmark.py  setup.py
